# microvis

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Untitled.ipynb  mkdocs.yml  pyproject.toml  tox.ini  x.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  USAGE.md  _hooks.py  _macros.py  index.md  types.md
examples/: cmap.py  colormaps.py  custom_node.py  direct_view.py  imshow.py  imshow_pygfx.py  imshow_vispy.py  notebook.ipynb  vispy_clip.py  volshow_pygfx.py  volshow_vispy.py
examples/playground/: imshow_pygfx.py  imshow_vispy.py  vispy_clip.py  volshow_pygfx.py
notes/: _pygfx_schema.pyi  _vispy_schema.pyi  dims_slicing_thoughts.md  feature_list.md  pygfx.py  schema.py  slice_mechanics.py  thoughts.md
src/cmap/: __init__.py  color.py  colormap.py  names.py  register.py  utils.py
src/microvis/: __init__.py  _logger.py  _logs.py  _protocols.py  _types.py  _util.py  _validators.py  convenience.py  core.py  schema.py  util.py  viewer.py
src/microvis/backend/: __init__.py  _base.py  _constants.py  _pygfx_schema.pyi  _vispy_schema.pyi  pygfx.py  vispy.py
src/microvis/backend/pygfx/: __init__.py  _camera.py  _canvas.py  _image.py  _node.py  _scene.py  _view.py
src/microvis/backend/vispy/: OLD.py  __init__.py  _base.py  _camera.py  _canvas.py  _constants.py  _image.py  _node.py  _nodes.py  _scene.py  _util.py  _view.py
src/microvis/controller/: __init__.py
src/microvis/core/: __init__.py  _base.py  _canvas.py  _functional.py  _image.py  _node.py  _transform.py  _view.py  _viewer.py  _vis_model.py  canvas.py  slice.py  view.py
src/microvis/core/nodes/: __init__.py  _data.py  camera.py  image.py  node.py  scene.py
src/microvis/schema/: __init__.py  _pygfx.py  _vispy.py
src/microvis/v2/: __init__.py  _types.py
src/microvis/v2/backend/vispy/: __init__.py  _canvas.py  _node.py  _util.py  _view.py
src/microvis/v2/core/: __init__.py  _base.py  canvas.py  view.py
src/microvis/v2/core/nodes/: node.py
tests/: conftest.py  test_cmap.py  test_microvis.py
tests/test_backend/test_vispy_qt/: __init__.py  test_custom_node.py  test_microvis.py
tests/test_core/: conftest.py  test_canvas.py  test_custom_node.py  test_view.py
