# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

# https://peps.python.org/pep-0621/
[project]
name = "microvis"
description = "package description."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [{ email = "talley.lambert@gmail.com" }, { name = "Talley Lambert" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "psygnal[proxy]",
    "pydantic",
    "jupyter-rfb",
    "ipywidgets<8.0",
    "vispy",
    "pyopengl",
    "loguru",
    "imageio"
]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov", "pytest-qt", "vispy", "pygfx"]
dev = [
    "black",
    "cruft",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-pyprojecttoml @ git+https://github.com/tlambert03/flake8-pyprojecttoml.git@main",
    "flake8-typing-imports",
    "flake8",
    "ipython",
    "isort",
    "mypy",
    "pdbpp",
    "pre-commit",
    "pydocstyle",
    "pytest-cov",
    "pytest",
    "rich",
]
pyqt5 = ["pyqt5"]
pyqt6 = ["pyqt6"]
pyside2 = ["pyside2"]
pyside6 = ["pyside6"]


[project.urls]
homepage = "https://github.com/tlambert03/microvis"
repository = "https://github.com/tlambert03/microvis"

# same as console_scripts entry point
# [project.scripts]
# spam-cli = "spam:main_cli"

# Entry points
# https://peps.python.org/pep-0621/#entry-points
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true
packages = { find = { where = ["src"], exclude = [] } }

[tool.setuptools.package-data]
"*" = ["py.typed"]


# https://github.com/pypa/setuptools_scm/#pyprojecttoml-usage
[tool.setuptools_scm]

# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
src_paths = ["src/microvis", "tests"]

# https://flake8.pycqa.org/en/latest/user/options.html
# https://gitlab.com/durko/flake8-pyprojecttoml
[tool.flake8]
exclude = "docs,.eggs,examples,_version.py"
max-line-length = 88
ignore = "E203"
min-python-version = "3.8.0"
docstring-convention = "all" # use numpy convention, while allowing D417
extend-ignore = """
E203  # whitespace before ':'
D107,D203,D212,D213,D402,D413,D415,D416  # numpy
D100  # missing docstring in public module
D401  # imperative mood
W503  # line break before binary operator
E704  # multiple statements on one line
"""
per-file-ignores = [
    "notes/*,tests/*:D",
    "*.pyi:E7,E3,D",
]


# http://www.pydocstyle.org/en/stable/usage.html
[tool.pydocstyle]
match_dir = "src/microvis"
convention = "numpy"
add_select = "D402,D415,D417"
ignore = "D100,D213,D401,D413,D107"

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:distutils Version classes are deprecated:",
    "ignore:GPUs can't support floating point data with more than 32-bits:",
]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true


# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
]

# https://github.com/cruft/cruft
[tool.cruft]
skip = ["tests"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".cruft.json",
    ".flake8",
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    "tests/**/*",
    "tox.ini",
]

# https://python-semantic-release.readthedocs.io/en/latest/configuration.html
[tool.semantic_release]
version_source = "tag_only"
branch = "main"
changelog_sections = "feature,fix,breaking,documentation,performance,chore,:boom:,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:,:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,Other"
# commit_parser=semantic_release.history.angular_parser
build_command = "pip install build && python -m build"
